# youtube-audio-downloader

./: .gitignore  README.md  com.github.sebasalas.youtube-audio-downloader.yml  install.sh  pyproject.toml  uninstall.sh  youtube-audio-downloader.desktop.template  youtube_audio_downloader.py
.github/workflows/: ci.yml
tests/: test_config.py  test_download.py  test_parsing.py  test_utils.py
youtubeaudiodownloader/: app_window.py  config.py  dialogs.py  download.py  exceptions.py  logger.py  main.py  parsing.py
